log/build_2024-10-19_23-14-09/Robot/stdout_stderr.log
running egg_info
writing ../../build/Robot/Robot.egg-info/PKG-INFO
writing dependency_links to ../../build/Robot/Robot.egg-info/dependency_links.txt
writing entry points to ../../build/Robot/Robot.egg-info/entry_points.txt
writing requirements to ../../build/Robot/Robot.egg-info/requires.txt
writing top-level names to ../../build/Robot/Robot.egg-info/top_level.txt
reading manifest file '../../build/Robot/Robot.egg-info/SOURCES.txt'
writing manifest file '../../build/Robot/Robot.egg-info/SOURCES.txt'
running build
running build_py
copying Robot/color_test.py -> /root/ros2_ws/build/Robot/build/lib/Robot
running install
running install_lib
copying /root/ros2_ws/build/Robot/build/lib/Robot/color_test.py -> /root/ros2_ws/install/Robot/lib/python3.10/site-packages/Robot
byte-compiling /root/ros2_ws/install/Robot/lib/python3.10/site-packages/Robot/color_test.py to color_test.cpython-310.pyc
running install_data
running install_egg_info
  File "/root/ros2_ws/install/Robot/lib/python3.10/site-packages/Robot/color_test.py", line 35
    else print(" NO COLOR ESPECÍFICO DETECTADO"):
         ^^^^^
SyntaxError: expected ':'

removing '/root/ros2_ws/install/Robot/lib/python3.10/site-packages/Robot-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/Robot/Robot.egg-info to /root/ros2_ws/install/Robot/lib/python3.10/site-packages/Robot-0.0.0-py3.10.egg-info
running install_scripts
Installing color_test script to /root/ros2_ws/install/Robot/lib/Robot
Installing image_capturer script to /root/ros2_ws/install/Robot/lib/Robot
writing list of installed files to '/root/ros2_ws/build/Robot/install.log'
